--- a/app/less/style.css
+++ b/app/less/style.css
@@ -55,3 +55,97 @@
   z-index: 9;
   overflow: hidden;
 }
+.music {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.musicContent {
+  overflow: hidden;
+}
+.musicContent .musicHeader {
+  margin: 10px 10px 0 10px;
+  padding: 10px 0;
+  text-align: center;
+  overflow: hidden;
+}
+.musicContent .musicList {
+  width: 233px;
+  height: 200px;
+  margin: -38px auto 0px;
+  text-align: center;
+  padding-top: 40px;
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#f2a489), to(#f68379));
+  border-radius: 50%;
+  border: 5px solid rgba(0, 0, 0, 0.9);
+}
+.musicContent .iconMusic {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  margin: 4%;
+  line-height: 60px;
+  font-size: 31px;
+  text-align: center;
+  border: 5px solid rgba(0, 0, 0, 0.9);
+  border-radius: 50%;
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#f2a489), to(#f68379));
+}
+.musicContent .icon-pause {
+  width: 70px;
+  height: 70px;
+  background: url(../images/music.png) 0 0 no-repeat;
+  background-size: 100%;
+}
+.musicContent .rotate {
+  -moz-animation: spin 8s infinite linear;
+  -o-animation: spin 8s infinite linear;
+  -webkit-animation: spin 8s infinite linear;
+  animation: spin 8s infinite linear;
+}
+.footer {
+  width: 100%;
+  margin-top: 30px;
+  font-size: 16px;
+  text-align: center;
+}
+@-moz-keyframes spin {
+  0% {
+    -moz-transform: rotate(0deg);
+  }
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@-o-keyframes spin {
+  0% {
+    -o-transform: rotate(0deg);
+  }
+  100% {
+    -o-transform: rotate(360deg);
+  }
+}
+@-ms-keyframes spin {
+  0% {
+    -ms-transform: rotate(0deg);
+  }
+  100% {
+    -ms-transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
